--- a/style.css
+++ b/style.css
@@ -552,7 +552,7 @@
 
 .container-box:hover{
     transform: translateX(3px);
-    box-shadow: 5px 20px 50px rgba(12, 109, 229, 0.1);
+    box-shadow: 5px 20px 50px rgb(12, 110, 229);
     border: 1px solid transparent;
     border-radius: 0px;
 }
