--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@
   \*-----------------------------------*/
   
   .hero {
-    background-image: url("sunsetpoint\ .jpg");
+    background-image: url("sunsetpoint .jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
