--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: hsla(0, 0%, 0%, 0.7);
+    background-color: hsla(0, 0%, 0%, 0.767);
     background-blend-mode: overlay;
     display: grid;
     place-items: center;
@@ -400,6 +400,9 @@
   .tour-search {
     background: var(--bright-navy-blue);
     padding-block: var(--section-padding);
+  }
+  .tour-search .input-wrapper{
+    margin: 10px;
   }
   
   .tour-search-form .input-label {
@@ -441,6 +444,9 @@
   \*-----------------------------------*/
   
   .popular { padding-block: var(--section-padding); }
+  .popular .container .section-subtitle{
+    margin-top: 10px;
+  }
   
   .popular-list,
   .popular-list > li:not(:last-child) { margin-bottom: 30px; }
@@ -519,7 +525,9 @@
     background: var(--bright-navy-blue); }
   .package .section-text{ color: var(--white); }
   .package .section-subtitle{ color: var(--white);  }
-  
+  .package .container .section-subtitle{
+    margin-top: 10px;
+  }
   
   .package-list { margin-bottom: 40px; }
   
@@ -630,25 +638,86 @@
   .package .btn { margin-inline: auto;
     border-color: white; }
   
-  
-    
-  
+  /*-----------------------------------*\
+   * Services *
+  \*-----------------------------------*/
  
+  .services { padding-block: var(--section-padding); 
+  }
+  .services .section-subtitle{
+    margin-top: 10px;
+    color: black;
+    font-size: 30px;
+  font-weight: 650;
+  }
   
-    
 
+    .text h2{
+  font-size: 40px;
+  font-weight: 650;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  line-height: 2;
+  text-align: center;
+    }
+
+  .rowitems{
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit,minmax(100px,auto));
+  gap: 25px;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+  margin-left: 30px ;
+  margin-right: 30px;
+  margin-bottom:10px ;
   
-  
-  
-  
-  
+}
+
+.container-box{
+  border: 1px solid #d3d3d3;
+  border-radius: 5px;
+  padding: 10px 10px;
+  transition: all 0.7s ease 0s;
+  cursor: pointer;
+}
+
+.container-image img{
+margin: auto;
+height: 100px;
+width: 100px;
+padding: 10px;
+margin-bottom: 15px;
+}
+
+.container-box h4{
+  font-size: 20px;
+  margin-bottom: 5px;
+  font-weight: 550;
+}
+
+.container-box p{
+  font-size: 16px;
+  color: #808080;
+}
+
+.container-box:hover{
+  transform: translateX(3px);
+  box-shadow: 5px 20px 50px rgba(64, 134, 221, 0.895);
+  border: 1px solid transparent;
+  border-radius: 0px;
+}
+ 
   
   /*-----------------------------------*\
    * #GALLERY
   \*-----------------------------------*/
   
   .gallery { padding-block: var(--section-padding); }
-  
+  .gallery .container .section-subtitle{
+    margin-top: 10px;
+  }
   .gallery-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -682,6 +751,9 @@
     background: var(--bright-navy-blue);
     padding-block: var(--section-padding);
   }
+  .cta .container .section-subtitle{
+    margin-top: 10px;
+  }
   
   .cta :is(.section-subtitle, .section-title, .section-text) { color: var(--white); }
   
@@ -690,8 +762,71 @@
 
 
 
+/*-----------------------------------*\
+  #ABOUT
+\*-----------------------------------*/
+.about { padding-block: var(--section-padding); 
+}
+.about-content { margin-bottom: 70px; margin-top: 10px; margin-right: 0px; margin-left: 2px;
+}
 
-  
+
+.about .section-subtitle { margin-bottom: 10px; }
+
+.about .section-title { margin-bottom: 20px; }
+
+
+.about-item-text {
+ color: var(--battleship-gray);
+ font-size: var(--fs-6);
+ line-height: 1.7;
+}
+
+.about-text { margin-bottom: 30px; }
+.about .about-text{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.about-list {
+ display: grid;
+ gap: 20px;
+ margin-bottom: 40px;
+}
+
+.about-item {
+ display: flex;
+ align-items: flex-start;
+ gap: 15px;
+}
+
+.about-item-icon {
+ background: var(--viridian-green);
+ color: var(--white-1);
+ font-size: 26px;
+ padding: 16px;
+ border-radius: 50%;
+ margin-top: 5px;
+}
+
+.about-item-title {
+ color: var(--granite-gray);
+ font-weight: var(--fw-600);
+ margin-bottom: 5px;
+}
+.about-content .btn {width: 38%; 
+margin-left: 100px;  
+margin-right: 150;
+ margin-bottom: 20px;
+} 
+.about-banner .w-100{
+ margin-left:3px;
+ margin-bottom: 3px;
+ padding-bottom: 2px;
+ width: 100;
+ height: 100;
+}
 
   
   
@@ -1335,73 +1470,6 @@ align-items: flex-end;
   
   }
 
-   /*-----------------------------------*\
-  #ABOUT
-\*-----------------------------------*/
-
-.about-content { margin-bottom: 70px; margin-top: 70px; margin-right: 0px; margin-left: 2px;
- }
-.about .about-text{
-  text-align: justify;
-}
-.about .section-subtitle { margin-bottom: 10px; }
-
-.about .section-title { margin-bottom: 20px; }
-
-
-.about-item-text {
-  color: var(--battleship-gray);
-  font-size: var(--fs-6);
-  line-height: 1.7;
-}
-
-.about-text { margin-bottom: 30px; }
-.about .about-text{
-display: flex;
-justify-content: center;
-align-items: center;
-}
-
-.about-list {
-  display: grid;
-  gap: 20px;
-  margin-bottom: 40px;
-}
-
-.about-item {
-  display: flex;
-  align-items: flex-start;
-  gap: 15px;
-}
-
-.about-item-icon {
-  background: var(--viridian-green);
-  color: var(--white-1);
-  font-size: 26px;
-  padding: 16px;
-  border-radius: 50%;
-  margin-top: 5px;
-}
-
-.about-item-title {
-  color: var(--granite-gray);
-  font-weight: var(--fw-600);
-  margin-bottom: 5px;
-}
-.about-content .btn {width: 38%; 
- margin-left: 100px;  
- margin-right: 150;
-  margin-bottom: 20px;
-} 
-.about-banner .w-100{
-  margin-left:3px;
-  margin-bottom: 3px;
-  padding-bottom: 2px;
-  width: 100;
-  height: 100;
-}
-
-
 
 @media (min-width: 992px) {
 /**
@@ -1431,62 +1499,5 @@ align-items: center;
  
   
 
-/* Services */
 
-.text h2{
-    font-size: 40px;
-    font-weight: 650;
-    margin-top: 40px;
-    margin-bottom: 10px;
-    line-height: 2;
-    text-align: center;
-}
-
-.rowitems{
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(auto-fit,minmax(100px,auto));
-    gap: 25px;
-    align-items: center;
-    text-align: center;
-    margin-top: 20px;
-    margin-left: 30px ;
-    margin-right: 30px;
-    margin-bottom:50px ;
-    
-}
-
-.container-box{
-    border: 1px solid #d3d3d3;
-    border-radius: 5px;
-    padding: 10px 10px;
-    transition: all 0.7s ease 0s;
-    cursor: pointer;
-}
-
-.container-image img{
-  margin: auto;
-  height: 100px;
-  width: 100px;
-  padding: 10px;
-  margin-bottom: 15px;
-}
-
-.container-box h4{
-    font-size: 20px;
-    margin-bottom: 5px;
-    font-weight: 550;
-}
-
-.container-box p{
-    font-size: 16px;
-    color: #808080;
-}
-
-.container-box:hover{
-    transform: translateX(3px);
-    box-shadow: 5px 20px 50px rgba(64, 134, 221, 0.895);
-    border: 1px solid transparent;
-    border-radius: 0px;
-}
 
