--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@
   left: 0;
   width: 100%;
   transition: var(--transition);
+  background-color:hsl(9, 36%, 14%);
   border-bottom: 1px solid hsl(0, 12%, 92%);
   padding-block: 10px;
   z-index: 1;
