--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@
   \*-----------------------------------*/
   
   .hero {
-    background-image: url("sunsetpoint\ .jpg");
+    background-image: url("main.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
