--- a/style.css
+++ b/style.css
@@ -1538,21 +1538,5 @@ align-items: flex-end;
   }
 
 
-@media (min-width: 992px) {
-/**
-   * ABOUT
-   */
-
-  .about .container {
-    margin-right: 4px;
-    display: grid;
-    grid-template-columns: 0.8fr 1fr;
-    align-items: center;
-    gap: 30px;
-    
-    
-  }
-
-  .about-content { margin-bottom: 10; }
-}
+\
 
