--- a/style.css
+++ b/style.css
@@ -876,6 +876,7 @@ margin-bottom: 15px;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   object-fit: cover;
+  height: fit-content;
 }
 
 .about-caption {
@@ -1539,4 +1540,5 @@ align-items: flex-end;
 
 
 \
+
 
