--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@
   left: 0;
   width: 100%;
   transition: var(--transition);
-  background-color:hsl(9, 36%, 14%);
+  background-color:white;
   border-bottom: 1px solid hsl(0, 12%, 92%);
   padding-block: 9px;
   z-index: 1;
@@ -254,7 +254,7 @@
 .search-btn,
 .nav-open-btn {
   font-size: 30px;
-  color: inherit;
+  color: var(--bright-navy-blue);
 }
 
 .search-btn { font-size: 20px; }
@@ -1540,5 +1540,6 @@ align-items: flex-end;
 
 
 \
+
 
 
