--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@
 }
 .header.active .header-top {
   position: fixed;
-  background: var(--gunmetal);
+  background: white;
 }
 
 .header-top .container {
@@ -1540,6 +1540,7 @@ align-items: flex-end;
 
 
 \
+
 
 
 
